// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prop-usage-locations Three levels - alias 1`] = `
Object {
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 31,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 24,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "name",
              "value": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 16,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 11,
                      "line": 0,
                    },
                  },
                  "name": "first",
                  "usage": Array [
                    Object {
                      "end": Object {
                        "column": 29,
                        "line": 2,
                      },
                      "start": Object {
                        "column": 24,
                        "line": 2,
                      },
                    },
                  ],
                  "value": "first",
                },
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 22,
                      "line": 0,
                    },
                    "start": Object {
                      "column": 18,
                      "line": 0,
                    },
                  },
                  "name": "last",
                  "usage": Array [
                    Object {
                      "end": Object {
                        "column": 41,
                        "line": 2,
                      },
                      "start": Object {
                        "column": 37,
                        "line": 2,
                      },
                    },
                  ],
                  "value": "last",
                },
              ],
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 29,
                  "line": 0,
                },
                "start": Object {
                  "column": 26,
                  "line": 0,
                },
              },
              "name": "age",
              "usage": Array [
                Object {
                  "end": Object {
                    "column": 25,
                    "line": 3,
                  },
                  "start": Object {
                    "column": 22,
                    "line": 3,
                  },
                },
              ],
              "value": "age",
            },
          ],
        },
      ],
      "location": Object {
        "end": Object {
          "column": 7,
          "line": 7,
        },
        "start": Object {
          "column": 29,
          "line": 2,
        },
      },
      "name": "myStory",
      "source": "({ name: { first, last }, age }) => (
        <>
          <Story first={first} last={last} />
          <Age value={age} />
        </>
      );",
    },
  },
}
`;

exports[`prop-usage-locations adjust lines 1`] = `
Object {
  "parameters": Array [
    Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 21,
          "line": 3,
        },
        "start": Position {
          "column": 8,
          "line": 3,
        },
      },
      "name": "name",
      "value": "Hello",
    },
  ],
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 5,
              "line": 0,
            },
            "start": Object {
              "column": 0,
              "line": 0,
            },
          },
          "name": "props",
          "usage": Array [
            Object {
              "end": Object {
                "column": 18,
                "line": 2,
              },
              "start": Object {
                "column": 13,
                "line": 2,
              },
            },
          ],
          "value": "props",
        },
      ],
      "location": Object {
        "end": Object {
          "column": 7,
          "line": 10,
        },
        "start": Object {
          "column": 29,
          "line": 6,
        },
      },
      "name": "myStory",
      "source": "props => (
        <Story
         {...props}
        />
      );",
    },
  },
  "title": undefined,
}
`;

exports[`prop-usage-locations empty body 1`] = `
Object {
  "stories": Object {
    "story": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 9,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 7,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "name",
              "usage": Array [
                Object {
                  "end": Object {
                    "column": 18,
                    "line": 0,
                  },
                  "start": Object {
                    "column": 14,
                    "line": 0,
                  },
                },
              ],
              "value": "name",
            },
          ],
        },
      ],
      "location": Object {
        "end": Object {
          "column": 39,
          "line": 1,
        },
        "start": Object {
          "column": 21,
          "line": 1,
        },
      },
      "name": "story",
      "source": "({ name }) => name;",
    },
  },
}
`;

exports[`prop-usage-locations multiple usage 1`] = `
Object {
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 8,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 6,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "age",
              "usage": Array [
                Object {
                  "end": Object {
                    "column": 37,
                    "line": 2,
                  },
                  "start": Object {
                    "column": 34,
                    "line": 2,
                  },
                },
                Object {
                  "end": Object {
                    "column": 25,
                    "line": 3,
                  },
                  "start": Object {
                    "column": 22,
                    "line": 3,
                  },
                },
              ],
              "value": "age",
            },
          ],
        },
      ],
      "location": Object {
        "end": Object {
          "column": 7,
          "line": 7,
        },
        "start": Object {
          "column": 29,
          "line": 2,
        },
      },
      "name": "myStory",
      "source": "({ age }) => (
        <>
          <Story name={name} age={age} />
          <Age value={age} />
        </>  
      );",
    },
  },
}
`;

exports[`prop-usage-locations props argument 1`] = `
Object {
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 5,
              "line": 0,
            },
            "start": Object {
              "column": 0,
              "line": 0,
            },
          },
          "name": "props",
          "usage": Array [
            Object {
              "end": Object {
                "column": 25,
                "line": 0,
              },
              "start": Object {
                "column": 20,
                "line": 0,
              },
            },
          ],
          "value": "props",
        },
      ],
      "location": Object {
        "end": Object {
          "column": 58,
          "line": 2,
        },
        "start": Object {
          "column": 29,
          "line": 2,
        },
      },
      "name": "myStory",
      "source": "props => <Story {...props} />;",
    },
  },
}
`;

exports[`prop-usage-locations string template 1`] = `
Object {
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 9,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 7,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "text",
              "usage": Array [
                Object {
                  "end": Object {
                    "column": 21,
                    "line": 0,
                  },
                  "start": Object {
                    "column": 17,
                    "line": 0,
                  },
                },
              ],
              "value": "text",
            },
          ],
        },
      ],
      "location": Object {
        "end": Object {
          "column": 46,
          "line": 1,
        },
        "start": Object {
          "column": 23,
          "line": 1,
        },
      },
      "name": "myStory",
      "source": "({ text }) => \`\${text}\`;",
    },
  },
}
`;

exports[`prop-usage-locations two arguments 1`] = `
Object {
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 6,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": "props",
          "usage": Array [
            Object {
              "end": Object {
                "column": 36,
                "line": 0,
              },
              "start": Object {
                "column": 31,
                "line": 0,
              },
            },
          ],
          "value": "props",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 15,
              "line": 0,
            },
            "start": Object {
              "column": 8,
              "line": 0,
            },
          },
          "name": "context",
          "value": "context",
        },
      ],
      "location": Object {
        "end": Object {
          "column": 69,
          "line": 2,
        },
        "start": Object {
          "column": 29,
          "line": 2,
        },
      },
      "name": "myStory",
      "source": "(props, context) => <Story {...props} />;",
    },
  },
}
`;

exports[`prop-usage-locations two levels - alias 1`] = `
Object {
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 22,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 15,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "name",
              "usage": Array [
                Object {
                  "end": Object {
                    "column": 46,
                    "line": 0,
                  },
                  "start": Object {
                    "column": 40,
                    "line": 0,
                  },
                },
              ],
              "value": "MyName",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 20,
                  "line": 0,
                },
                "start": Object {
                  "column": 17,
                  "line": 0,
                },
              },
              "name": "age",
              "usage": Array [
                Object {
                  "end": Object {
                    "column": 56,
                    "line": 0,
                  },
                  "start": Object {
                    "column": 53,
                    "line": 0,
                  },
                },
              ],
              "value": "age",
            },
          ],
        },
      ],
      "location": Object {
        "end": Object {
          "column": 89,
          "line": 2,
        },
        "start": Object {
          "column": 29,
          "line": 2,
        },
      },
      "name": "myStory",
      "source": "({ name: MyName, age }) => <Story name={MyName} age={age} />;",
    },
  },
}
`;

exports[`prop-usage-locations two levels sub arguments 1`] = `
Object {
  "stories": Object {
    "myStory": Object {
      "arguments": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 14,
              "line": 0,
            },
            "start": Object {
              "column": 1,
              "line": 0,
            },
          },
          "name": undefined,
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 7,
                  "line": 0,
                },
                "start": Object {
                  "column": 3,
                  "line": 0,
                },
              },
              "name": "name",
              "usage": Array [
                Object {
                  "end": Object {
                    "column": 36,
                    "line": 0,
                  },
                  "start": Object {
                    "column": 32,
                    "line": 0,
                  },
                },
              ],
              "value": "name",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 12,
                  "line": 0,
                },
                "start": Object {
                  "column": 9,
                  "line": 0,
                },
              },
              "name": "age",
              "usage": Array [
                Object {
                  "end": Object {
                    "column": 46,
                    "line": 0,
                  },
                  "start": Object {
                    "column": 43,
                    "line": 0,
                  },
                },
              ],
              "value": "age",
            },
          ],
        },
      ],
      "location": Object {
        "end": Object {
          "column": 79,
          "line": 2,
        },
        "start": Object {
          "column": 29,
          "line": 2,
        },
      },
      "name": "myStory",
      "source": "({ name, age }) => <Story name={name} age={age} />;",
    },
  },
}
`;
